layout bug fixes

--- a/stylesheets/scss/style.scss
+++ b/stylesheets/scss/style.scss
@@ -115,12 +115,12 @@ section{
 .workintro{
   @include span-columns(12);
 
-  margin-top: 25%;
+  margin-top: 15%;
 
   .worksvg{
     @include span-columns(4 of 12);
 
-    height: 50%;
+    height: 30%;
 
     background-image:   url("../img/work.svg");
     background-size:    100%;
@@ -131,7 +131,7 @@ section{
   .divider{
     @include span-columns(12);
 
-    height:   100%;
+    height:   50%;
 
     background-image:    url("../img/divider.svg");
     background-size:    100%;
@@ -139,8 +139,8 @@ section{
     background-repeat:  no-repeat;
     
     display:        block;
-    margin-bottom:  5rem;
-    margin-top:     -10rem;
+    margin-bottom:  4%;
+    margin-top:     -10%;
   }
 }
 
@@ -156,7 +156,7 @@ section{
   color:      #3778FF;  
   
   position:   relative;
-  margin-top: 8rem;
+  margin-top: 6%;
 
   .images{
     @include span-columns(7 of 12);
